# decomp.dev

./: .gitignore  Cargo.toml  README.md  bacon.toml  biome.json  config.example.yml  package-lock.json  package.json  rsbuild.config.ts  tsconfig.json
.cargo/: config.toml
.sqlx/: query-04a6f30bd4c7529178b100f327993544ab883b28fe61646b61507930e76d5752.json  query-0a643e5596bd37e5ba8018e9decd2717ce8ed1a38d31a9f0652ed4ec9091b419.json  query-0ba3585fd6ddf3c941d59b360fe177083607758c56bd1d8279c2bdb1590ae3d6.json  query-0ca422ccf34a2f1a8d15f5f620821c1a65f7678ea1929b61885dde31bc4b6f24.json  query-15bbe4fa503d79dfa792cfa473fabe7696222b06744bc83049e8f83a25f469a6.json  query-1b7ac7957d627716425086be3712af5273f2af32ad168254ae4f6309302ebc27.json  query-2363204aced866535584944ba227709677e6d74d2d08b0d668e54d1863fb75e0.json  query-23a6be61c86478402eb00bb9fd64642188eec62eec0846a4a25a8110459997f1.json  query-268754c74b6b43b9f8a5ba8d256ab42063a0e5989e25ddaa8486736bc1fced7d.json  query-269859ed391626ddbc2af37381a13c36976f48e6a89aaaa03da8ea66baccddff.json  query-2d55fd406b948029e83a7ad21ab5f8186e44638d8b5a2eb1135300b8ff14d864.json  query-36261e887badca80fc0c19ac0a368951387da8f8a42623be91ca2d251c745364.json  query-38ef605692e5dacc4bdea1029eb3200bc709b34be62126cfd84308ac7d26437f.json  query-3d364e78b24eeee0a277780d8fcba063666e5dbc76c8bd56bf926e45f6d1333d.json  query-3d625ccc90b0a896ab906107c60e784df93a969f7a381854eee2777370e90906.json  query-40064a6137d5177432a13ba71255b4a836c567139892ab997a80ea40158e5082.json  query-40da4ebeb3450a8c78a890e359bcca067142cbc16805c73f186bca873a8e9c98.json  query-415ca8dbe5fb5b2d573200257e96f2689efdbd0af3397ebdc9f4dec0a8709bd3.json  query-4756303132114bcbac47dd560381c0cc2883a7708f5da51fdc6f0ec81e1ce292.json  query-4f0ac4223f5bcedc2f382bdd76fdbcb415496435223f87cc40583b82c3ea2bbd.json  query-50e7e6303ba6fa91e2f527c7fa864a28ad702456c58e950c3d5d58e4e8d9b59e.json  query-563bea47238272cf883abc1662ee37ce3154c075d8a6f2d4db48c95f31033cc2.json  query-5bdd491e42bf700a271a5fc8431e2511d3f1668d07956ac60a1450ddd8901135.json  query-5de3235fb918d2e691289b998a5899e71f5f491f72864b134b4debe85bb57fa9.json  query-60a01415ef25ea6a2fc7f3287e0e6972404e351401f8aeaedbc74b4c934c777c.json  query-623f7e3b25e9ef7dc62faca1010bce28ccc632a70a65bb547b627714b8cf4389.json  query-66c72864237c9c44358e1d3a3333a11d00dd4a6d1bb30bc852aaa792089a3403.json  query-6a621805308cca23a2bf14da126d6bc3081b7957d55da6666ffdd9dcc6939aab.json  query-73202b4ec319f5f7f2b2bf0df5cfa9d70bb07ed984a7029f4df6b70e16aebe43.json  query-756e4c1b9b1d5e0bf5100247a18e8998ecc0596dd1b9f388f1d6116c2209ef96.json  query-77fa30390ff028ea9fff086a695e87e65bba44f4344aa4575a081b8d1f6eddb3.json  query-86318ebdf4ce242b320f209e79ae7af307f061f92c8d284addfecfe5215476ea.json  query-90f1835556158307751f942ca172c6f091f0ceea883330b0e3c7ba6b9e56db4b.json  query-912ad9086ec8b4caa4acf3e6642cfce34ebcff88a5fe321b31a56af31e8eda83.json  query-927b8e137db05ddd2996e9b2d04b80f8af3f6e2113654f3dd4a24ff5efb0855a.json  query-92992242dd758ba9981b43e130684f92eacd4508f2162a77db4fdd0f8f30669f.json  query-95a7b2851db18715190acf896aac789d30c4d48e46a4cde60a39dfb33d1d5d41.json  query-9e97542fc2e9ed675d992047ac5188df2580f150c09e69410b401a86d5001882.json  query-9ea268b7129fc3851ce05790e7789dcfb8dbe4ec110cf956df61c89a9a491a8a.json  query-9eed896babce627d1d9c207c22d9c416b18b851f0cd191affe530d539613a2d6.json  (+19 more)
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  util.rs
crates/cli/src/cmd/: changes.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  models.rs  util.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/github/: Cargo.toml
crates/github/graphql/: queries.graphql
crates/github/src/: changes.rs  graphql.rs  lib.rs  webhook.rs
crates/images/: Cargo.toml
crates/images/src/: badge.rs  lib.rs  svg.rs  treemap.rs
crates/jobs/: Cargo.toml
crates/jobs/src/: handlers.rs  lib.rs
crates/jobs/src/jobs/: mod.rs  refresh.rs  refresh_project.rs  workflow_run.rs
crates/scripts/: Cargo.toml
crates/scripts/src/: css.rs  js.rs  lib.rs
crates/web/: Cargo.toml
crates/web/src/: cron.rs  main.rs  proto.rs
crates/web/src/frogress/: mod.rs
crates/web/src/handlers/: api.rs  auth.rs  common.rs  csp.rs  images.rs  manage.rs  mod.rs  project.rs  report.rs  treemap.rs  webhook.rs
css/: history.css  main.scss
js/: api.module.css  api.tsx  entry.ts  env.d.ts  history.ts  main.ts  manage.ts  projects.ts  treemap.ts  util.ts
migrations/: 11_reports_data_version.sql  12_frogress_mappings.sql  13_project_default_category.sql  14_reports_git_commit_message.sql  15_project_workflow_id.sql  16_reports_timestamp_fix.sql  17_project_enable_pr_comments.sql  18_images_table.sql  19_project_enabled.sql  20_cascade_delete_reports.sql  21_project_pr_report_style.sql
public/: site.webmanifest
src/: cron.rs  main.rs  models.rs  templates.rs
src/db/: mod.rs
src/frogress/: mod.rs
src/github/: mod.rs
src/handlers/: auth.rs  github.rs  js.rs  mod.rs  og.rs  project.rs  report.rs
templates/: projects.html  report.html
templates/fragments/: footer.html  header.html  nav-links.html
