[workspace]
resolver = "3"
members = [
    "crates/auth",
    "crates/core",
    "crates/db",
    "crates/github",
    "crates/images",
    "crates/scripts",
    "crates/web",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
futures-util = "0.3.31"
hex = "0.4"
image = "0.25"
maud = { version = "0.27", features = ["axum"] }
mime = "0.3"
objdiff-core = { version = "2.5", features = ["bindings"] }
#objdiff-core = { path = "../objdiff/objdiff-core", features = ["bindings"] }
octocrab = { version = "0.44", features = ["stream"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "zstd", "http2", "rustls-tls-native-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["serde", "macros"] }
tokio = { version = "1.40", features = ["full"] }
tower-sessions = "0.14"
tracing = "0.1"
url = { version = "2.5", features = ["serde"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
