[workspace]
resolver = "3"
members = [
    "crates/auth",
    "crates/cli",
    "crates/core",
    "crates/db",
    "crates/github",
    "crates/images",
    "crates/jobs",
    "crates/web",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[workspace.dependencies]
anyhow = "1.0"
apalis = "1.0.0-rc.1"
apalis-board = { version = "1.0.0-rc.1", features = ["axum"] }
apalis-codec = "0.1.0-rc.1"
apalis-cron = "1.0.0-rc.1"
apalis-sqlite = "1.0.0-rc.1"
axum = { version = "0.8", features = ["macros"] }
futures-util = "0.3.31"
hex = "0.4"
image = "0.25"
maud = { version = "0.27", features = ["axum"] }
mime = "0.3"
objdiff-core = { git = "https://github.com/encounter/objdiff", rev = "0c48d711c7bd51f791b353d7d85ba948b277e2f2", features = ["bindings", "serde"] }
#objdiff-core = { path = "../objdiff/objdiff-core", features = ["bindings", "serde"] }
octocrab = { version = "0.44", features = ["stream"] }
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "zstd", "http2", "rustls-tls-native-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["serde", "macros"] }
tokio = { version = "1.40", features = ["full"] }
tower-sessions = "0.14"
tracing = "0.1"
url = { version = "2.5", features = ["serde"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
[profile.dev.package.image]
opt-level = 3
[profile.dev.package.webp]
opt-level = 3
[profile.dev.package.image-webp]
opt-level = 3
[profile.dev.package.rgb]
opt-level = 3
[profile.dev.package.png]
opt-level = 3
[profile.dev.package.zune-core]
opt-level = 3
[profile.dev.package.zune-jpeg]
opt-level = 3
