[package]
name = "decomp-dev-auth"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64 = "0.22"
decomp-dev-core = { path = "../core" }
maud.workspace = true
octocrab.workspace = true
rand = "0.9"
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tower-sessions.workspace = true
tracing.workspace = true
url.workspace = true
