[package]
name = "decomp-dev-cli"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
argp = "0.4"
decomp-dev-core = { path = "../core" }
decomp-dev-github = { path = "../github" }
objdiff-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing.workspace = true
typed-path = "0.11"
