[package]
name = "decomp-dev-db"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
blake3 = "1.5"
decomp-dev-core = { path = "../core" }
futures-util.workspace = true
hex.workspace = true
moka = { version = "0.12", features = ["future"] }
objdiff-core.workspace = true
prost = "0.13"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "time"] }
time.workspace = true
tracing.workspace = true
zstd = "0.13"
serde_json.workspace = true