[package]
name = "decomp-dev-github"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
axum.workspace = true
decomp-dev-core = { path = "../core" }
decomp-dev-db = { path = "../db" }
futures-util.workspace = true
graphql_client = "0.14"
hex = "0.4"
hmac = "0.12"
http = "1.3"
jsonwebtoken = "9.3"
objdiff-core.workspace = true
octocrab.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
time.workspace = true
tokio.workspace = true
tracing.workspace = true
zip = { version = "4.2", default-features = false, features = ["deflate-flate2-zlib-rs"] }
