[package]
name = "decomp-dev-images"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
axum.workspace = true
badge-maker = "0.3"
decomp-dev-core = { path = "../core" }
image.workspace = true
mime.workspace = true
num-format = "0.4"
objdiff-core.workspace = true
palette = "0.7"
resvg = "0.45"
serde.workspace = true
streemap = "0.1"
tokio.workspace = true
tracing.workspace = true

