[package]
name = "decomp-dev-web"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
axum.workspace = true
decomp-dev-auth = { path = "../auth" }
decomp-dev-core = { path = "../core" }
decomp-dev-db = { path = "../db" }
decomp-dev-github = { path = "../github" }
decomp-dev-images = { path = "../images" }
decomp-dev-scripts = { path = "../scripts" }
itertools = "0.14"
maud = { version = "0.27", features = ["axum"] }
mime.workspace = true
objdiff-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
time.workspace = true
timeago = { version = "0.4.2", default-features = false }
tokio-cron-scheduler = "0.13"
tokio.workspace = true
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
tower-livereload = "0.9"
tower-sessions-sqlx-store = { version = "0.15", features = ["sqlite"] }
tower-sessions.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing.workspace = true
url.workspace = true

# image
image.workspace = true

# proto
bytes = "1.7"
prost = "0.13"
